# typress

./: .gitignore  .gitmodules  README.md  app.py  font_test.typ  frontend.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: build-frontend.yml  node.js.yml
typress/: __main__.py  train_config.example.json
typress/app/: api.py  frontend.py  model.py
typress/app/frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
typress/app/frontend/public/js/: all-in-one-lite.bundle.js
typress/app/frontend/src/: App.vue  main.js
typress/app/frontend/src/assets/: main.css
typress/app/frontend/src/components/: FeedbackPopup.vue  FormulaImg.vue  FormulaResult.vue  Shields.vue  UploadFile.vue
typress/app/model/: typressmodel.py  utils.py
typress/app/model/det_model/: LICENSE  infer.py  model.py  preprocess.py
typress/app/model/ocr_model/: model.py
typress/dataset/: __main__.py  genimg.py  tools.py  typ_process.py
typress/dataset/genimg/: genimg.py  img_augment.py
typress/model/: model.py
typress/train/: __main__.py  dataset.py  eval.py  train.py  train_tokenizer.py
