[project]
name = "typress"
version = "0.1.0"
description = "Typst Equation OCR"
authors = [
    {name = "ParaN3xus", email = "paran3xus007@gmail.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-cors>=5.0.0",
    "flask>=3.1.0",
    "onnxruntime>=1.20.1",
    "pillow>=11.1.0",
    "transformers>=4.47.1",
    "opencv-python>=4.10.0.84",
    "torch>=2.5.1",
    "python-dotenv>=1.0.1",
    "evaluate>=0.4.3",
    "typst>=0.12.2",
    "my-unimernet",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jiwer>=3.0.5",
]

[tool.uv.sources]
my-unimernet = { git = "https://github.com/paran3xus/my-unimernet" }
